<resources>
    <string name="app_name">PidorsBizarreAdventure</string>
    <string name="helloString">Pidors Bizarre Adventure</string>
    <string name="zarubaTitle">Title</string>
    <string name="description">Description</string>
    <string name="partis">Your nickname</string>
    <string name="winReward">Winner Reward</string>
    <string name="looseReward">Looser Punishment</string>'
    <string name="conditions">Conditions</string>
    <string name="logoDescr">Bizarre logo</string>
    <string name="noTitle">Untitled</string>
    <string name="emptyField">none</string>
    <string name="failedChallenge">What challenge have you failed?</string>
    <string name="violation">So, what have you done?</string>
    <string name="admit">Admit</string>
    <string name="logo">logo</string>
    <string name="challengeicon">Challenge Icon</string>
    <string name="addConditions">Add Challenge Conditions</string>
    <string name="penaltyPoints">Add all needed challenge conditions and set penalty points to them.</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="type_condition_here">Type condition here</string>
    <string name="type_new_conditions_here">Type new conditions here</string>
    <string name="finish">Finish</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="defisSeparator">-</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join">Join</string>
    <string name="previous">Previous</string>
    <string name="create_own">or create your own</string>
    <string name="join_existing">Join existing challenge</string>
    <string name="create_new">Create new</string>
    <string name="paste_challenge_id">Paste challenge ID here</string>
    <string name="nickname">Your nickname</string>
    <string name="sign_in_error">Invalid email or password. Try again.</string>
    <string name="or">or</string>
    <string name="hello_user">Hello, %s!</string>
    <string name="sign_out">Sign Out</string>
</resources>
