<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.creation.metainfostep.MetaInfoInputFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewShortTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zarubaTitle"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/zarubaTitle"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewWin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/winReward"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editWin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/winReward"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewLoose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/looseReward"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editLoose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/looseReward"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonToCondStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next" />

            <Button
                android:id="@+id/buttonToCancelsStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>