<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.info.editing.ChallengeEditFragment">

    <include
        android:id="@+id/editToolBar"
        layout = "@layout/toolbar"/>

    <EditText
        android:id="@+id/editTextInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <EditText
        android:id="@+id/editTextInfoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/winReward" />

    <EditText
        android:id="@+id/editTextReward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/looseReward" />

    <EditText
        android:id="@+id/editTextPunishment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>